# DecomposedReasoning

./: .gitignore  .gitmodules  README.md  history.md
Analysis/: README.md  analysis_types.py  branching_engine.py  build_report.py  candidate_clustering.py  chat_templating.py  clustering_debug_embeddings.py  compare_tok_sec.py  default_prompts.json  io_utils.py  migrate_data.py  pyproject.toml  report_ui_assets.py  run_branching_lm_eval.py  run_branching_novelty_bench.py  run_steer_branching.py  sft_warmup_eps_trigger_example.md  sft_warmup_off_policy_examples.md  sft_warmup_verbalized_offpolicy_block_stats.json  sft_warmup_verbalized_offpolicy_block_stats.md  sft_warmup_verbalized_offpolicy_current_letsdo_5_full.md  sft_warmup_verbalized_offpolicy_examples.md  sft_warmup_verbalized_offpolicy_stats.json  sft_warmup_verbalized_offpolicy_stats.md  static_report.py  tag_scanner.py  token_metrics.py  vllm_client.py
Analysis/branching_eval/: __init__.py  aime_bridge.py  artifact_store.py  branch_decode_utils.py  branch_executor.py  branch_scheduler.py  cli.py  config_types.py  debug_aime24_1gpu.yaml  debug_aime24_1gpu_sft_steer.yaml  debug_aime24_1gpu_sft_steer_doc4_tok32k.yaml  debug_aime24_1gpu_sft_steer_doc4_tok32k_cluster_across.yaml  debug_aime24_1gpu_sft_steer_doc4_tok32k_restart_cluster_p8120.yaml  debug_aime24_1gpu_sft_steer_doc4_tok32k_restart_random.yaml  debug_aime24_1gpu_smoke.yaml  doc_progress.py  embedding_selection.py  event_db.py  event_db_sql.py  event_db_writer.py  event_types.py  example_aime24.yaml  legacy_steer_rollout.py  lm_eval_adapter.py  local_lru.py  metrics_types.py  nonbranch_steer.py  novelty_bench.py  novelty_bench_types.py  request_runtime.py  resume_state.py  run_matrix.py  run_specs.py  runtime_types.py  selector_runtime.py  selector_types.py  steer_decode_flow.py  steer_normalization.py  steer_trajectory_extractor.py  tree_event_stats.py  (+3 more)
Analysis/notebooks/: clustering_debug_embeddings_demo.ipynb
Analysis/scripts/: calibrate_entropy_threshold.py  cleanup_branching_eval_logs.py  extract_successful_steer_trajectory.py  finalize_sft_warmup_off_policy.py  generate_sft_warmup_off_policy.py  merge_sft_warmup_cleaned_outputs.py  plot_response_lengths_and_failures.py  plot_rl_problem_passrates.py  plot_steer_exec_faithfulness.py  plot_wait_counts_over_steps.py  run_dolci_math_sample.py  run_partial_steer_pair_batch.py  run_story_completion_batch.py  run_story_intervention_batch.py  serve_branching_viz.py  sft_warmup_cleaning.py  submit_sft_warmup_off_policy_ckpt300.sbatch  track_branching_tree_events.py  visualize_branching_common.py  visualize_branching_doc_data.py  visualize_branching_interactive.py  visualize_branching_payload.py  visualize_branching_progress.py  visualize_branching_replay.py  visualize_branching_run.py  visualize_branching_run_registry.py  visualize_branching_sqlite_payload.py  visualize_branching_web.py
Analysis/slurm/: branching_eval_debug.sbatch
Analysis/tests/: conftest.py  test_branching_engine.py  test_build_report.py  test_candidate_clustering.py  test_chat_templating.py  test_clustering_debug_embeddings.py  test_compare_tok_sec.py  test_compression.py  test_static_report.py  test_steer_exec_faithfulness.py  test_tag_scanner.py  test_token_metrics.py  test_vllm_client.py  test_wait_counts_over_steps.py
BuildRLDataset/: README.md  answer_filter.py  build_rl_dataset.py  jsonl_io.py  plot_passrate_distributions.py  pyproject.toml  source_audit.py
BuildRLDataset/tests/: test_build_rl_dataset.py
BuildSFTDataset/: README.md  analyze_steering_clusters.py  analyze_transform_subset.py  build_sft_dataset.py  curate_exec_blocks.py  pipeline_common.py  pipeline_sample.py  pipeline_transform.py  pipeline_types.py  pyproject.toml  streamlit_app.py  system_prompt.md  user_prompt.md
BuildSFTDataset/tests/: test_analyze_steering_clusters_dry.py  test_batch_recovery_dry_run.py  test_clean_think_structure.py  test_cli_dry_run.py  test_non_sequitur_bundle.py  test_transform_async.py
Eval/: README.md  cleanup_lora_checkpoints.py  pyproject.toml  select_best_checkpoint.py
Eval/configs/: lm_eval_vllm.yaml
Eval/eval_runner/: __init__.py  aime_avgk.py  checkpoint_sweep.py  config_types.py  model_reference.py  run_lm_eval.py  standalone.py  topology_env.py  wandb_utils.py
Eval/scripts/: run_standalone_eval.sh
Eval/slurm/: matrix.sh  standalone_eval.sbatch
Eval/tests/: test_aime_avgk.py  test_checkpoint_sweep.py  test_config_types.py  test_run_lm_eval.py  test_standalone_eval.py  test_topology_env.py
RLTraining/: README.md  pyproject.toml  requirements.txt
RLTraining/branching_dapo/: __init__.py  advantage.py  agent_loop_manager.py  bootstrap.py  config_types.py  main_ppo_branching.py  reward_fn.py  rollout_utils.py  run_specs.py  runtime_metrics.py  task_runner.py  trainer.py  update_masking.py  verl_compat.py
RLTraining/flash_attn/: __init__.py  bert_padding.py
RLTraining/scripts/: benchmark_vllm_decode.py  create_env.sh  debug_verbalized_off_policy_sampling.py  export_qwen3_vl_text_model.py  install_causal_conv1d_fastpath.sh  monitor_slurm_rl_run.sh  run_branching_alpha_sweep.sh  run_branching_dapo_olmo3.sh  run_branching_dapo_olmo3_lora_ddp2.sh  run_branching_dapo_olmo3_lora_ddp4.sh  run_branching_dapo_olmo3_lora_ddp4_10step.sh  run_branching_dapo_qwen35_smoke.sh  stream_q35_4b_5553508_step200.py  stream_q35_4b_5611097_completion.py  stream_q35_4b_5611097_steps_side_by_side.py  stream_q35_4b_added_tokens_side_by_side.py  submit_qwen35_smoke_matrix.sh
RLTraining/slurm/: submit_chunked_branching_dapo.py
RLTraining/tests/: test_branching_dapo.py  test_branching_dapo_reward.py  test_branching_dapo_rollout_manager.py  test_run_specs.py  test_update_masking.py
SFTTraining/: .gitignore  README.md  pyproject.toml
SFTTraining/configs/: base_sft.yaml  lm_eval_vllm.yaml
SFTTraining/scripts/: submit_matrix.sh
SFTTraining/sft_training/: __init__.py  config_types.py  non_sequitur_masking.py  train.py  train_unsloth.py  wandb_utils.py
SFTTraining/slurm/: train.sbatch  (+2 more)
vLLM_Experimental/: .gitignore  pyproject.toml
(+165 files in other folders)
