[project]
name = "decomposed-reasoning-rltraining"
version = "0.1.0"
description = "Local RL training environment for DecomposedReasoning branching DAPO runs."
requires-python = ">=3.12,<3.13"
dependencies = [
  "accelerate==1.12.0",
  "codetiming==1.4.0",
  "causal-conv1d==1.6.2.post1",
  "datasets==4.5.0",
  "dill==0.4.0",
  "fastapi==0.136.3",
  "flash-linear-attention==0.5.0",
  "flashinfer-python==0.6.11.post2",
  "grpcio==1.80.0",
  "hf-transfer==0.1.9",
  "hydra-core==1.3.2",
  "latex2sympy2-extended==1.11.0",
  "math-verify==0.9.0",
  "numpy==2.3.5",
  "nvidia-ml-py==13.595.45",
  "omegaconf==2.3.0",
  "packaging==25.0",
  "pandas==3.0.0",
  "peft==0.18.1",
  "pyarrow==23.0.0",
  "pyright==1.1.408",
  "pytest==9.0.2",
  "ray[default]==2.53.0",
  "tensorboard==2.20.0",
  "tensordict==0.10.0",
  "torch==2.11.0+cu129",
  "torchdata==0.11.0",
  "transformers==5.9.0",
  "triton==3.6.0",
  "uvicorn==0.48.0",
  "vllm==0.22.0",
  "wandb==0.25.0",
]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.pyright]
include = ["branching_dapo", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
extraPaths = ["../Analysis"]
